main.css
/**********************************************************/
/*notes*/
/**********************************************************/

/*
animation: name duration timing delay iterations direction fill-mode play-state
defaults: none 0 ease 0 1 normal none running
*/

/**********************************************************/
/*globals*/
/**********************************************************/
/*::-webkit-scrollbar {
    display: none;
}*/

* {
    box-sizing: border-box;
}

html, body {
    /*https://developers.google.com/web/updates/2016/12/url-bar-resizing*/
    /*  
        use vh unit for height: 
        - on android chrome: spans entire view as if url bar is hidden (think safari on iphone does the same thing according to above link -- untested) 
        - this fix prevents the background jumping around when scrolling on a mobile device 
    */
    width: 100%;
    height: 100vh;
}

img {
    /*https://stackoverflow.com/questions/31444891/mystery-white-space-underneath-image-tag/31445364#31445364*/
    /*
        img tags default to inline-block
        - this was giving some extra pixels below the images
    */
    display: block;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

/**********************************************************/
/*background image*/
/**********************************************************/
.bg {
    /*use vh on this*/

    background: url(images/bg.jpg) no-repeat;
    background-color: #46545E;
    background-size: cover;
    position: fixed; 

    bottom: 0vh;
    left: 0%;
    top: auto;
    right: auto;
    min-width: 100%;
    min-height: 100vh;

    z-index: -1;
}

/**********************************************************/
/*title screen*/
/**********************************************************/
.titleScreen {
    width: 100%;
    height: 100%;
}

.title {
    position: absolute; 

    text-align: center;
    bottom: 50%;
    transform: translate(0%, 50%);

    font-family: 'Alegreya Sans SC', sans-serif;
    font-size: 75px;
    font-weight: 100;
    color: white;
    opacity: 0;

    width:100%;
}

/**********************************************************/
/*about*/
/**********************************************************/

.about {
    position: relative;
    width: 70%;
    margin-left: 15%;
    margin-top: 10%;
}

.aboutTitle {
    text-align: center;
    font-family: 'Alegreya Sans', sans-serif;
    font-size: 40px;
    font-weight: 300;
    color: white;
    width: 100%;
}

.aboutSubTitle {
    margin-top: 15px;
    text-align: center;
    font-family: 'Alegreya Sans SC', sans-serif;
    font-size: 30px;
    font-weight: 100;
    color: white;
    width: 100%;
}

.aboutContent {
    margin-top: 45px;
    font-family: 'Alegreya Sans', sans-serif;
    font-size: 24px;
    font-weight: 300;
    color: white;
    text-align: center;
    /*line-height: 1.5;*/
}

.aboutContentItem {
    margin-top: 25px;
}

/**********************************************************/
/*projects*/
/**********************************************************/
.projects {
    position: relative;
    margin-top: 20%;
    width: 70%;
    margin-left: 15%;
}

.projectsTitle {
    text-align: center;
    font-family: 'Alegreya Sans', sans-serif;
    font-size: 40px;
    font-weight: 300;
    color: white;
    width: 100%;
}

.projectsSubTitle {
    margin-top: 15px;
    text-align: center;
    font-family: 'Alegreya Sans SC', sans-serif;
    font-size: 30px;
    font-weight: 100;
    color: white;
    width: 100%;
}

.projectsGrid {
    margin-top: 30px;
    width: 100%;
}

.projectsGrid::after {
    content: "";
    clear: both;
    display: table;
}

.projectImgContainer {
    float: left;
    width: 33.333333%;
    padding: 10px;
}

.projectImg {
    padding: 5px;
    width:100%;
    background-color: #efefef38;
}

.projectImg:hover{
    padding: 0px;
    border-style: solid;
    border-color: #ffffffaa;
    border-width: 5px;
    cursor: pointer;
}

.focusedProject {
    display: none;
    margin-top: 30px;
    width: 100%;
}

.focusedProjectGrid {
    display: flex;
}

.emptySpace {
    width: 33.333333%;
}

.focusedProjectDetails {
    width:100%;
    height: 100%;
    text-align: center;
}

.focusedProjectDetails a {
    color: white;
    font-style: italic;
}

.focusedProjectDetails .name {
    margin-top: 30px;
    font-family: 'Alegreya Sans SC', sans-serif;
    font-size: 40px;
    font-weight: 300;
    color: white;
    font-style: normal;
}

.focusedProjectDetails .description {
    margin-top: 15px;
    font-family: 'Alegreya Sans', sans-serif;
    font-size: 24px;
    font-weight: 300;
    color: white;
}

.focusedProjectDetails .tools {
    margin-top: 15px;
    font-family: 'Alegreya Sans SC', sans-serif;
    font-size: 24px;
    font-weight: 300;
    color: white;
}

.focusedProjectDetails .link {
    font-family: 'Alegreya Sans SC', sans-serif;
    padding-top: 15px;
    font-size: 24px;
    font-weight: 300;
    color: white;
    font-style: normal;
}

/**********************************************************/
/*contact*/
/**********************************************************/

.contact {
    position: relative;
    width: 100%;
    height: 100%;
}

.contactInfo {
    position: absolute; 
    text-align: center;
    bottom: 50%;
    transform: translate(0%, 50%);
    width:100%;
}

.contactTitle {
    font-family: 'Alegreya Sans', sans-serif;
    font-size: 40px;
    font-weight: 300;
    color: white;
}

.contactEmail {
    margin-top: 15px;
    font-family: 'Alegreya Sans SC', sans-serif;
    font-size: 30px;
    font-weight: 100;
    color: white;
}

/**********************************************************/
/*arrows*/
/**********************************************************/
.bow {
    position: absolute; 
    text-align: center;
    right: 50%;
    transform: translate(50%, 0%);
    color: white;
    opacity: 0;
    width: 60px;

    bottom: 10%;
}

.bow:hover {
    cursor: pointer;
}

.arrowContainer {
    width: 100%;
    text-align: center;
    margin-top: 10%;
    margin-bottom: 10%;
}

.arrow {
    position: relative; 
    left: 50%;
    transform: translate(-50%, 0%);
    color: white;
    width: 60px;
}

.arrow:hover {
    cursor: pointer;
}

.arrows {
    position: absolute; 
    text-align: center;
    right: 50%;
    transform: translate(50%, 0%);
    color: white;
    width: 60px;

    bottom: 10%;
}

/**********************************************************/
/*animations*/
/**********************************************************/
.fadeInTitle { 
    /*set delay to 0s here, will be handled in js*/
    animation: fadeIn 3s ease 0s 1 forwards;
}

.fadeInArrow { 
    /*set delay to 0s here, will be handled in js*/
    animation: fadeIn 2s ease 0s 1 forwards;
}

@keyframes fadeIn {
    from { opacity: 0; }
    to   { opacity: 1; }
}

